--- a/Level1/Unit1/LifeLessons/index.html
+++ b/Level1/Unit1/LifeLessons/index.html
@@ -219,7 +219,7 @@ function createClickableWord(word) {
     return wordElem;
 }
 
- function selectAnswer(wordElem, word) {
+function selectAnswer(wordElem, word) {
     const answerArea = document.getElementById('answer-area');
     const wordsContainer = document.getElementById('words-container');
 
@@ -227,22 +227,19 @@ function createClickableWord(word) {
     if (answerArea.textContent) {
         const currentAnswer = answerArea.textContent;
 
-        // Limpa o campo de resposta
-        answerArea.textContent = '';
-
-        // Adiciona a resposta anterior de volta ao container de opções, caso seja incorreta
-        if (userAnswers[currentQuestionIndex] !== questions[currentQuestionIndex].answer) {
-            if (!document.getElementById(`word-${currentAnswer}`)) {
-                const previousAnswerElem = createClickableWord(currentAnswer);
-                wordsContainer.appendChild(previousAnswerElem);
-            }
+        // Adiciona a resposta antiga de volta à área de opções
+        if (!document.getElementById(`word-${currentAnswer}`)) {
+            const previousAnswerElem = createClickableWord(currentAnswer);
+            wordsContainer.appendChild(previousAnswerElem);
         }
     }
 
     // Atualiza o campo de resposta com a nova escolha
     answerArea.textContent = word;
     userAnswers[currentQuestionIndex] = word;
-    wordElem.remove(); // Remove a nova escolha da área de opções
+
+    // Remove a nova escolha da área de opções
+    wordElem.remove();
 }
 
     // Função para remover uma resposta incorreta do campo de resposta e colocá-la de volta na área de opções
@@ -302,7 +299,7 @@ function removeAnswer() {
         }
     }
 
-  function checkAnswers() {
+ function checkAnswers() {
     let allCorrect = true;
     const wordsContainer = document.getElementById('words-container');
     wordsContainer.innerHTML = ""; // Limpa a área de opções para reconstruir apenas as incorretas
@@ -310,7 +307,7 @@ function removeAnswer() {
     questions.forEach((q, index) => {
         // Verifica a resposta para cada pergunta
         if (userAnswers[index] === q.answer) {
-            // Mantém a borda verde para respostas corretas e não adiciona de volta
+            // Mantém a borda verde para respostas corretas após a verificação
             if (index === currentQuestionIndex) {
                 document.getElementById('answer-area').style.border = "2px solid green";
             }
