--- a/Level1/Unit1/LifeLessons/index.html
+++ b/Level1/Unit1/LifeLessons/index.html
@@ -297,38 +297,29 @@ function removeAnswer() {
 function checkAnswers() {
     let allCorrect = true;
     const wordsContainer = document.getElementById('words-container');
+    wordsContainer.innerHTML = ""; // Limpa a área de opções para reconstruir apenas as incorretas
 
-    // Verifica cada resposta e aplica as alterações necessárias
     questions.forEach((q, index) => {
-        if (userAnswers[index] === q.answer) {
-            // Mantém a resposta correta e aplica a borda verde
-            if (index === currentQuestionIndex) {
-                const answerArea = document.getElementById('answer-area');
-                answerArea.style.border = "2px solid green";
-            }
-        } else {
-            // Marca que nem todas as respostas estão corretas
+        // Verifica se a resposta está correta
+        if (userAnswers[index] !== q.answer) {
             allCorrect = false;
 
-            // Adiciona a resposta incorreta de volta à área de opções, se não estiver lá
-            if (!document.getElementById(`word-${userAnswers[index]}`)) {
-                const wordElem = createClickableWord(userAnswers[index]);
+            // Adiciona as respostas incorretas de volta à área de opções
+            if (!document.getElementById(`word-${q.answer}`)) {
+                const wordElem = createClickableWord(q.answer);
                 wordsContainer.appendChild(wordElem);
-            }
-
-            // Remove a resposta incorreta do campo de resposta
-            if (index === currentQuestionIndex) {
-                const answerArea = document.getElementById('answer-area');
-                answerArea.textContent = '';
             }
         }
     });
 
     if (allCorrect) {
+        // Exibe borda verde apenas após todas as respostas estarem corretas
+        document.getElementById('answer-area').style.border = "2px solid green";
         showModal("Congratulations! You have completed the phase.");
         updateProgressInDatabase(); // Atualiza progresso após conclusão
     } else {
         showModal("Some answers were incorrect. Try again!");
+        resetIncorrectAnswers(); // Reseta respostas incorretas e atualiza a área de respostas
         currentQuestionIndex = 0; // Reinicia para a primeira questão
         loadQuestion(); // Recarrega a primeira questão
     }
