--- a/Level2/Unit1/StoryCards/index.html
+++ b/Level2/Unit1/StoryCards/index.html
@@ -311,7 +311,7 @@ async function loadContent() {
             if (showText) {
                 cardElement.innerHTML = `<div class="card-text"><p>${cardData.text}</p></div>`;
             } else {
-                cardElement.innerHTML = `<img src="images/${cardData.image}.png" alt="Image">`;
+                cardElement.innerHTML = `<img src="images/${cardData.image}.jpeg" alt="Image">`;
             }
 
             const businessmanImage = document.createElement('img');
