--- a/Level1/Unit1/teacher/Fine Motor Skills/index.html
+++ b/Level1/Unit1/teacher/Fine Motor Skills/index.html
@@ -12,12 +12,8 @@
         }
 
         body {
-    margin: 10px 30px; /* Reduz o espaço superior */
     font-family: Arial, sans-serif;
-    background-image: url('../../../../imagens/fundo.png');
-    background-repeat: repeat;
-    background-size: auto;
-    background-color: #ffffff; /* Cor de segurança caso a imagem não carregue */
+    background-color: #ffffff; 
 }
 
         .line {
