--- a/Level1/Unit1/Fill in the Blanks/index.html
+++ b/Level1/Unit1/Fill in the Blanks/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hannah Fill in the Blanks</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -159,6 +161,11 @@
         #completion-modal button:hover {
             background: #2980b9;
         }
+.read-btn i {
+    font-size: 1.2em; /* Ajusta o tamanho dos ícones */
+    margin-right: 5px; /* Espaço entre o ícone e o texto */
+    vertical-align: middle; /* Alinha o ícone ao texto */
+}
     </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
@@ -183,7 +190,9 @@
         <button id="previousBtn" onclick="previousQuestion()">⏪ Previous</button>
         <button id="nextBtn" onclick="nextQuestion()">Next ⏩</button>
         <button id="tipsBtn" onclick="showTips()">Tips</button>
-        <button id="readBtn" onclick="readText()">Read</button>
+        <button class="read-btn" id="read-btn" onclick="readQuestion()">
+    <i class="fas fa-file-alt"></i> <i class="fas fa-volume-up"></i> Read
+</button>
         <button id="finishBtn" onclick="checkAnswers()">Finish</button>
         <button id="pdfBtn" onclick="generatePDF()">Generate PDF</button>
     </div>
