--- a/Level1/Unit1/QUIZ/index.html
+++ b/Level1/Unit1/QUIZ/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hannah Quiz</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <style>
         /* Estilos existentes mantidos */
         body {
@@ -76,10 +77,13 @@
             background-color: #45a049;
         }
 
-        .read-btn {
+        .read-btn i {
+            font-size: 1.2em; /* Ajusta o tamanho dos ícones */
+            margin-right: 5px; /* Espaço entre o ícone e o texto */
+            vertical-align: middle; /* Alinha o ícone ao texto */
             background-color: #FF9800;
             color: white;
-        }
+}
 
         .read-btn:hover {
             background-color: #FB8C00;
@@ -159,7 +163,9 @@
 </div>
 
 <div class="btn-group">
-    <button class="read-btn" id="read-btn" onclick="readQuestion()">Read</button>
+    <button class="read-btn" id="read-btn" onclick="readQuestion()">
+    <i class="fas fa-file-alt"></i> <i class="fas fa-volume-up"></i> Read
+</button>
     <button class="prev-btn" id="prev-btn" onclick="stopReading(); showPreviousQuestion()">Previous</button>
     <button class="next-btn" id="next-btn" onclick="stopReading(); showNextQuestion()">Next</button>
 </div>
