--- a/Level1/Unit1/QUIZ/index.html
+++ b/Level1/Unit1/QUIZ/index.html
@@ -77,12 +77,16 @@
             background-color: #45a049;
         }
 
+        .read-btn {
+            background-color: #FF9800;
+            color: white;
+        }
+
         .read-btn i {
             font-size: 1.2em; /* Ajusta o tamanho dos ícones */
             margin-right: 5px; /* Espaço entre o ícone e o texto */
             vertical-align: middle; /* Alinha o ícone ao texto */
-            background-color: #FF9800;
-            color: white;
+           
 }
 
         .read-btn:hover {
