--- a/Level1/Unit1/Fill in the Blanks/index.html
+++ b/Level1/Unit1/Fill in the Blanks/index.html
@@ -65,9 +65,9 @@
             background-color: #f39c12;
             color: #fff;
         }
-        #readBtn {
-            background-color: #3498db;
-            color: #fff;
+      .read-btn {
+            background-color: #FF9800;
+            color: white;
         }
         #finishBtn {
             background-color: #2ecc71;
