--- a/Level1/Unit1/Fill in the Blanks/index.html
+++ b/Level1/Unit1/Fill in the Blanks/index.html
@@ -193,7 +193,7 @@
         <button id="previousBtn" onclick="previousQuestion()">⏪ Previous</button>
         <button id="nextBtn" onclick="nextQuestion()">Next ⏩</button>
         <button id="tipsBtn" onclick="showTips()">Tips</button>
-        <button id="finishBtn" onclick="checkAnswers()">Finish</button>
+        <button id="finishBtn" onclick="checkAnswers()">Check</button>
         <button id="pdfBtn" onclick="generatePDF()">Generate PDF</button>
     </div>
 
