--- a/Level1/Unit1/Fill in the Blanks/index.html
+++ b/Level1/Unit1/Fill in the Blanks/index.html
@@ -192,8 +192,7 @@
 </button>
         <button id="previousBtn" onclick="previousQuestion()">⏪ Previous</button>
         <button id="nextBtn" onclick="nextQuestion()">Next ⏩</button>
-        <button id="tipsBtn" onclick="showTips()">Tips</button>
-        <button id="finishBtn" onclick="checkAnswers()">✔Check</button>
+        <button id="tipsBtn" onclick="showTips()">Tips</button>        
         <button id="pdfBtn" onclick="generatePDF()">Generate PDF</button>
     </div>
 
@@ -300,14 +299,29 @@
         }
 
         function showQuestion(questionNumber) {
-            const questionsContainer = document.getElementById('questionsContainer');
-            questionsContainer.innerHTML = formatQuestion(questionsData[questionNumber - 1].text);
+    const questionsContainer = document.getElementById('questionsContainer');
+    questionsContainer.innerHTML = ''; // Limpa o conteúdo anterior
 
-            document.getElementById('previousBtn').disabled = questionNumber === 1;
-            document.getElementById('nextBtn').disabled = questionNumber === totalQuestions;
-            document.getElementById('tipsContainer').style.display = 'none';
-            synth.cancel();
-        }
+    // Adiciona o texto da questão
+    const questionTextHTML = document.createElement('div');
+    questionTextHTML.innerHTML = formatQuestion(questionsData[questionNumber - 1].text);
+    questionsContainer.appendChild(questionTextHTML);
+
+    // Adiciona o botão "Check" logo após o texto da questão
+    const checkButton = document.createElement('button');
+    checkButton.id = 'finishBtn';
+    checkButton.innerText = '✔ Check';
+    checkButton.onclick = checkAnswers; // Usa a função checkAnswers já existente
+    questionsContainer.appendChild(checkButton);
+
+    // Configura os botões de navegação
+    document.getElementById('previousBtn').disabled = questionNumber === 1;
+    document.getElementById('nextBtn').disabled = questionNumber === totalQuestions;
+
+    // Oculta as dicas e cancela qualquer leitura de texto em andamento
+    document.getElementById('tipsContainer').style.display = 'none';
+    synth.cancel();
+}
 
         function formatQuestion(text) {
             return text.replace(/___/g, '<span class="blank" contenteditable="true"></span>');
