--- a/Level1/Unit1/Fill in the Blanks/index.html
+++ b/Level1/Unit1/Fill in the Blanks/index.html
@@ -68,11 +68,19 @@
       .read-btn {
             background-color: #FF9800;
             color: white;
+
+       #finishBtn {
+    display: inline-block;
+    margin-left: 10px;
+    background-color: #2ecc71;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    padding: 5px 10px;
+    font-size: 16px;
+    cursor: pointer;
         }
-        #finishBtn {
-            background-color: #2ecc71;
-            color: #fff;
-        }
+
         #previousBtn, #nextBtn {
             background-color: #2980b9;
             color: #fff;
@@ -298,21 +306,21 @@
             showQuestion(1);
         }
 
-        function showQuestion(questionNumber) {
+       function showQuestion(questionNumber) {
     const questionsContainer = document.getElementById('questionsContainer');
     questionsContainer.innerHTML = ''; // Limpa o conteúdo anterior
 
-    // Adiciona o texto da questão
-    const questionTextHTML = document.createElement('div');
-    questionTextHTML.innerHTML = formatQuestion(questionsData[questionNumber - 1].text);
-    questionsContainer.appendChild(questionTextHTML);
+    // Formata o texto da questão com os espaços em branco
+    const questionTextHTML = formatQuestion(questionsData[questionNumber - 1].text);
 
-    // Adiciona o botão "Check" logo após o texto da questão
-    const checkButton = document.createElement('button');
-    checkButton.id = 'finishBtn';
-    checkButton.innerText = '✔ Check';
-    checkButton.onclick = checkAnswers; // Usa a função checkAnswers já existente
-    questionsContainer.appendChild(checkButton);
+    // Adiciona o botão "Check" ao final da linha
+    const fullQuestionWithCheck = `
+        <span>${questionTextHTML}</span>
+        <button id="finishBtn" onclick="checkAnswers()" style="margin-left: 10px; background-color: #2ecc71; color: #fff; border: none; border-radius: 5px; padding: 5px 10px; font-size: 16px; cursor: pointer;">✔ Check</button>
+    `;
+
+    // Atualiza o container com o texto e o botão
+    questionsContainer.innerHTML = fullQuestionWithCheck;
 
     // Configura os botões de navegação
     document.getElementById('previousBtn').disabled = questionNumber === 1;
