--- a/Level1/Unit1/Fill in the Blanks/index.html
+++ b/Level1/Unit1/Fill in the Blanks/index.html
@@ -195,7 +195,7 @@
     <div id="tipsContainer" class="tips"></div>
 
     <div class="buttons">
-         <button class="read-btn" id="read-btn" onclick="readQuestion()">
+         <button class="read-btn" id="read-btn" onclick="readText()">
              <i class="fas fa-file-alt"></i> <i class="fas fa-volume-up"></i> Read
 </button>
         <button id="previousBtn" onclick="previousQuestion()">⏪ Previous</button>
