--- a/Level1/Unit1/QUIZ/index.html
+++ b/Level1/Unit1/QUIZ/index.html
@@ -170,8 +170,8 @@
     <button class="read-btn" id="read-btn" onclick="readQuestion()">
     <i class="fas fa-file-alt"></i> <i class="fas fa-volume-up"></i> Read
 </button>
-    <button class="prev-btn" id="prev-btn" onclick="stopReading(); showPreviousQuestion()">Previous</button>
-    <button class="next-btn" id="next-btn" onclick="stopReading(); showNextQuestion()">Next</button>
+    <button class="prev-btn" id="prev-btn" onclick="stopReading(); showPreviousQuestion()">⏪ Previous</button>
+    <button class="next-btn" id="next-btn" onclick="stopReading(); showNextQuestion()">Next ⏩</button>
 </div>
 
 <div id="feedback" class="feedback">
