--- a/Level1/Unit1/Fill in the Blanks/index.html
+++ b/Level1/Unit1/Fill in the Blanks/index.html
@@ -198,8 +198,8 @@
          <button class="read-btn" id="read-btn" onclick="readText()">
              <i class="fas fa-file-alt"></i> <i class="fas fa-volume-up"></i> Read
 </button>
-        <button id="previousBtn" onclick="previousQuestion()">⏪ Previous</button>
-        <button id="nextBtn" onclick="nextQuestion()">Next ⏩</button>
+        <button id="previousBtn" onclick="previousQuestion()">❮❮ Previous</button>
+        <button id="nextBtn" onclick="nextQuestion()">Next ❯❯</button>
         <button id="tipsBtn" onclick="showTips()">Tips</button>        
         <button id="pdfBtn" onclick="generatePDF()">Generate PDF</button>
     </div>
