--- a/Level1/Unit1/QUIZ/index.html
+++ b/Level1/Unit1/QUIZ/index.html
@@ -319,6 +319,15 @@ firebase.auth().onAuthStateChanged(function(user) {
         }
     }
 
+function toggleButtons(state) {
+    document.getElementById('prev-btn').disabled = !state;
+    document.getElementById('next-btn').disabled = !state;
+    document.getElementById('read-btn').disabled = !state;
+
+    const radios = document.querySelectorAll('input[type="radio"]');
+    radios.forEach(radio => radio.disabled = !state);
+}
+
    function checkAnswer(radioElement, selectedAnswer) {
     const q = questions[currentQuestionIndex];
     const feedbackDiv = document.getElementById('feedback');
@@ -329,26 +338,32 @@ firebase.auth().onAuthStateChanged(function(user) {
     // Salva a resposta do usuário
     userAnswers[currentQuestionIndex] = selectedAnswer;
 
+    toggleButtons(false); // Bloqueia os botões
+
     if (selectedAnswer === q.correct) {
-        feedbackImg.src = 'certo.gif'; 
+        feedbackImg.src = 'certo.gif';
         feedbackAudio.src = 'certo.mp3';
         feedbackAudio.play();
         feedbackDiv.style.display = 'block';
         gifContainer.style.display = 'block';
         answeredQuestions[currentQuestionIndex] = true;
+
         setTimeout(() => {
             hideGIF();
+            toggleButtons(true); // Desbloqueia os botões
             showNextQuestion();
             checkCompletion();
         }, 2000);
     } else {
-        feedbackImg.src = 'errado.gif'; 
+        feedbackImg.src = 'errado.gif';
         feedbackAudio.src = 'errado.mp3';
         feedbackAudio.play();
         feedbackDiv.style.display = 'block';
         gifContainer.style.display = 'block';
+
         setTimeout(() => {
             hideGIF();
+            toggleButtons(true); // Desbloqueia os botões
             radioElement.checked = false;
         }, 2000);
     }
