--- a/Level1/Unit1/Speak/index.html
+++ b/Level1/Unit1/Speak/index.html
@@ -92,27 +92,30 @@
             margin: 0 10px;
         }
         #startButton {
-            background-color: #007BFF;
-            border: none;
-            cursor: pointer;
-            border-radius: 50%;
-            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-            padding: 15px;
-            display: inline-block;
-            transition: box-shadow 0.3s ease;
-        }
+    margin-top: 10px;
+    margin-bottom: 10px;
+    background-color: #007BFF;
+    border: none;
+    cursor: pointer;
+    border-radius: 50%;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    padding: 15px;
+    display: inline-block;
+    transition: box-shadow 0.3s ease;
+    position: relative;
+}
         #startButton img {
-            width: 50px;
-            height: 50px;
-        }
+    width: 40px;
+    height: 40px;
+}
         #startButton:disabled {
             background-color: #cccccc;
             cursor: not-allowed;
             box-shadow: none;
         }
-        #startButton:hover {
-            box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.3);
-        }
+       #startButton:hover {
+    box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.3);
+}
         #finalFeedback {
             font-size: 2em;
             color: green;
@@ -182,7 +185,10 @@
     <h1>Word Reading Practice</h1>
     <div class="container">
         <img id="image" class="image" src="" alt="Image">
-        <img id="icon" class="icon" src="businessman.png" alt="Icon">
+<button id="startButton">
+    <img src="microfone.png" alt="Play Sound">
+</button>
+<img id="icon" class="icon" src="businessman.png" alt="Icon">
     </div>
     <div class="word" id="word"></div>
     <button id="startButton">
