--- a/Level1/Unit1/Speak/index.html
+++ b/Level1/Unit1/Speak/index.html
@@ -116,6 +116,18 @@
        #startButton:hover {
     box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.3);
 }
+#icon {
+    display: block;
+    margin: 10px auto;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+}
+
+#icon img {
+    width: 50px;
+    height: 50px;
+}
         #finalFeedback {
             font-size: 2em;
             color: green;
@@ -185,15 +197,15 @@
     <h1>Word Reading Practice</h1>
     <div class="container">
         <img id="image" class="image" src="" alt="Image">
-<button id="startButton">
-    <img src="microfone.png" alt="Play Sound">
+
+<!-- Botão de som entre a imagem e a palavra -->
+<button id="icon" class="icon">
+    <img src="businessman.png" alt="Play Word">
 </button>
-<img id="icon" class="icon" src="businessman.png" alt="Icon">
+
+<div class="word" id="word"></div>
     </div>
     <div class="word" id="word"></div>
-    <button id="startButton">
-        <img src="microfone.png" alt="Start Speaking">
-    </button>
     <div class="result" id="result"></div>
     <div class="navigation">
         <button id="prevButton" class="button nav-button">Previous</button>
