--- a/Level1/Unit1/Speak/index.html
+++ b/Level1/Unit1/Speak/index.html
@@ -92,42 +92,27 @@
             margin: 0 10px;
         }
         #startButton {
-    margin-top: 10px;
-    margin-bottom: 10px;
-    background-color: #007BFF;
-    border: none;
-    cursor: pointer;
-    border-radius: 50%;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-    padding: 15px;
-    display: inline-block;
-    transition: box-shadow 0.3s ease;
-    position: relative;
-}
+            background-color: #007BFF;
+            border: none;
+            cursor: pointer;
+            border-radius: 50%;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+            padding: 15px;
+            display: inline-block;
+            transition: box-shadow 0.3s ease;
+        }
         #startButton img {
-    width: 40px;
-    height: 40px;
-}
+            width: 50px;
+            height: 50px;
+        }
         #startButton:disabled {
             background-color: #cccccc;
             cursor: not-allowed;
             box-shadow: none;
         }
-       #startButton:hover {
-    box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.3);
-}
-#icon {
-    display: block;
-    margin: 10px auto;
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
-}
-
-#icon img {
-    width: 50px;
-    height: 50px;
-}
+        #startButton:hover {
+            box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.3);
+        }
         #finalFeedback {
             font-size: 2em;
             color: green;
@@ -197,15 +182,12 @@
     <h1>Word Reading Practice</h1>
     <div class="container">
         <img id="image" class="image" src="" alt="Image">
-
-<!-- Botão de som entre a imagem e a palavra -->
-<button id="icon" class="icon">
-    <img src="businessman.png" alt="Play Word">
-</button>
-
-<div class="word" id="word"></div>
+        <img id="icon" class="icon" src="businessman.png" alt="Icon">
     </div>
     <div class="word" id="word"></div>
+    <button id="startButton">
+        <img src="microfone.png" alt="Start Speaking">
+    </button>
     <div class="result" id="result"></div>
     <div class="navigation">
         <button id="prevButton" class="button nav-button">Previous</button>
@@ -442,7 +424,7 @@
             wordDiv.classList.add("enlarged");
             const utterance = new SpeechSynthesisUtterance(word);
             utterance.lang = 'en-US';
-            utterance.rate = 1;
+            utterance.rate = 0.7;
             utterance.onend = () => {
                 wordDiv.classList.remove("enlarged");
                 if (callback) callback();
